feat(content-type): user is able to update content type
