# internals/entity/content_type.go
@@ -7,7 +7,7 @@ type ContentType struct {
 	Name      string     `gorm:"type:varchar(300)" json:"name"`
 	CreatedAt time.Time  `gorm:"type:timestamp" json:"created_at"`
 	CreatedBy int32      `gorm:"type:int" json:"created_by"`
-	UpdatedAt time.Time  `gorm:"type:timestamp" json:"updated_at"`
+	UpdatedAt time.Time  `gorm:"type:timestamp; default:null" json:"updated_at"`
 	DeletedAt *time.Time `gorm:"type:timestamp" json:"deleted_at"`
 	Deleted   bool       `gorm:"type:bool;default:false" json:"deleted"`
 	DeletedBy int32      `gorm:"type:int" json:"deleted_by"`
