# internals/module/v1/content_type/controller/content_type_controller.go
@@ -15,6 +15,7 @@ type ContentTypeController interface {
 	GetAll(ctx *fiber.Ctx) error
 	GetById(ctx *fiber.Ctx) error
 	Create(ctx *fiber.Ctx) error
+	Update(ctx *fiber.Ctx) error
 }
 
 type ContentTypeControllerImpl struct {
@@ -103,6 +104,17 @@ func (ct ContentTypeControllerImpl) GetById(ctx *fiber.Ctx) error {
 
 }
 
+// ShowAccount godoc
+// @Summary      create content type by id
+// @Description  create content type by id
+// @Tags         types
+// @Accept       json
+// @Produce      json
+// @Param	id path	string	false	"id"
+// @Param payload body dto.ContentTypePayload true "The input struct"
+// @Success      200  {object}  dto.ContentTypePayload
+// @Router       /contents/:id/types [post]
+// @Security 	 Bearer
 func (ct ContentTypeControllerImpl) Create(ctx *fiber.Ctx) error {
 	var c = ctx.Context()
 	var payload dto.ContentTypePayload
@@ -118,14 +130,44 @@ func (ct ContentTypeControllerImpl) Create(ctx *fiber.Ctx) error {
 	}
 
 	//claim token
-	_, err := token.ExtractTokenMetada(ctx)
+	token, err := token.ExtractTokenMetada(ctx)
 	if err != nil {
 		return helper.ApiResponse(ctx, false, "Forbidden", err.Error(), nil, fiber.StatusForbidden)
 	}
 
-	if err := ct.contentTypeService.Create(c, &payload); err != nil {
+	if err := ct.contentTypeService.Create(c, &payload, int32(token.UserId)); err != nil {
 		return helper.ApiResponse(ctx, true, "Bad Request", err.Error(), nil, fiber.StatusBadRequest)
 	}
 
 	return helper.ApiResponse(ctx, true, "Create Success", "", &payload, fiber.StatusCreated)
+}
+
+func (ct ContentTypeControllerImpl) Update(ctx *fiber.Ctx) error {
+	var c = ctx.Context()
+	var payload dto.ContentTypePayload
+	var id = ctx.Params("type_id")
+
+	typeId, err := strconv.Atoi(id)
+	if err != nil {
+		return helper.ApiResponse(ctx, false, "Bad Request", err.Error(), nil, fiber.StatusBadRequest)
+	}
+	//body parsing
+	if err := ctx.BodyParser(&payload); err != nil {
+		return helper.ApiResponse(ctx, false, "Bad Request", err.Error(), nil, fiber.StatusBadRequest)
+	}
+	//request body validation
+	if err := ct.validate.Struct(&payload); err != nil {
+		return helper.ApiResponse(ctx, false, "Bad Request", err.Error(), nil, fiber.StatusBadRequest)
+	}
+	//claim token
+	_, err = token.ExtractTokenMetada(ctx)
+	if err != nil {
+		return helper.ApiResponse(ctx, false, "Forbidden", err.Error(), nil, fiber.StatusForbidden)
+	}
+
+	if err := ct.contentTypeService.Update(c, typeId, &payload); err != nil {
+		return helper.ApiResponse(ctx, true, "Bad Request", err.Error(), nil, fiber.StatusBadRequest)
+	}
+
+	return helper.ApiResponse(ctx, true, "Update Success", "", &payload, fiber.StatusCreated)
 }
