# internals/module/v1/content_type/dto/content_type_model.go
@@ -1,5 +1,7 @@
 package dto
 
+import "time"
+
 type ContentTypePaginate struct {
 	Data       *[]ContentType
 	Page       int
@@ -13,5 +15,6 @@ type ContentType struct {
 }
 
 type ContentTypePayload struct {
-	Name string `gorm:"type:archar(300)" json:"name"`
+	Name      string    `gorm:"type:varchar(300)" json:"name"`
+	UpdatedAt time.Time `gorm:"type:timestamptz; default:null" json:"updated_at"`
 }
