# internals/module/v1/content_type/route.go
@@ -17,4 +17,5 @@ func ContentTypeRoutes(r fiber.Router, containerConf *container.Container) {
 	r.Get("/:id/types", middleware.JWTProtect(), controller.GetAll)
 	r.Get("/:id/types/:type_id", middleware.JWTProtect(), controller.GetById)
 	r.Post("/:id/types", middleware.JWTProtect(), controller.Create)
+	r.Patch("/:id/types/:type_id", middleware.JWTProtect(), controller.Update)
 }
