# internals/module/v1/content_type/service/content_type_service.go
@@ -2,6 +2,7 @@ package service
 
 import (
 	"context"
+	"errors"
 
 	"github.com/tangguhriyadi/content-service/internals/module/v1/content_type/dto"
 	"github.com/tangguhriyadi/content-service/internals/module/v1/content_type/repository"
@@ -10,8 +11,8 @@ import (
 type ContentTypeService interface {
 	GetAll(c context.Context, page int, limit int) (dto.ContentTypePaginate, error)
 	GetById(c context.Context, id int) (dto.ContentType, error)
-	// Update(c context.Context, id int, payload *dto.ContentType) error
-	Create(c context.Context, payload *dto.ContentTypePayload) error
+	Update(c context.Context, id int, payload *dto.ContentTypePayload) error
+	Create(c context.Context, payload *dto.ContentTypePayload, user_id int32) error
 }
 
 type ContentTypeServiceImpl struct {
@@ -46,15 +47,32 @@ func (ct ContentTypeServiceImpl) GetById(c context.Context, id int) (dto.Content
 	return contentType, nil
 }
 
-func (ct ContentTypeServiceImpl) Create(c context.Context, payload *dto.ContentTypePayload) error {
+func (ct ContentTypeServiceImpl) Create(c context.Context, payload *dto.ContentTypePayload, user_id int32) error {
 	var content dto.ContentTypePayload
 
 	content.Name = payload.Name
 
-	err := ct.contentTypeRepository.Create(c, &content)
+	err := ct.contentTypeRepository.Create(c, &content, user_id)
 
 	if err != nil {
 		return err
+	}
+
+	return nil
+}
+
+func (ct ContentTypeServiceImpl) Update(c context.Context, id int, payload *dto.ContentTypePayload) error {
+	_, err := ct.contentTypeRepository.GetById(c, id)
+	if err != nil {
+		return errors.New("content type not found")
+	}
+
+	var contentType dto.ContentTypePayload
+	contentType.Name = payload.Name
+
+	errors := ct.contentTypeRepository.Update(c, id, &contentType)
+	if errors != nil {
+		return errors
 	}
 
 	return nil
